--- a/README.org
+++ b/README.org
@@ -3,35 +3,35 @@
 
 * Generage autocomplete
 
-Instead of its normal output, =gglargs= will output code to do an
-autocomplete.
-
-You can name this and override =__suggest_key_<KeyName>_values= that must
-set the variable =candidates=.
-
-We can create the file and edit it manually or genrate it automatically and
-override the fucntions in another file
+Interpose this executable
 
 #+begin_src sh
-export GGLARGS_GENERAGE_AUTOCOMPLETE
-# - adapt your script so that it does not pollute the output
-#   and so that it quits after calling gglargs when the variable
-#   is set
-# - run the script (hopefully getting just the output of gglargs)
+export PATH=$PWD/build:$PATH
 #+end_src
 
-Now that you have a file =ord_soumet_autocomplete_base= from the output
-of the previous command, you can create a file like this
+and call a program that uses =cclargs= with =-generate-autocomplete= as the only
+argument.
+
 #+begin_src sh
-source ord_soumet_autocomplete_base.sh
+ord_soumet -generate-autocomplete
+#+end_src
+
+* Using
+
+The output script is already usable and will complete options
+
+* Extending
+
+The generated file has "completion functions" for each key which we can modifiy
+to define how to complete values for that option.
+
+#+begin_src sh
 __suggest_key_jobfile_values(){
     candidates="one two three"
 }
 #+end_src
 
-where you override some definitions.
-
-Get as fancy as you like
+or you can use it as a base file and override functions in another file.
 
 #+begin_src sh
 source ord_soumet_autocomplete_base.sh
